# trabalho-2-oscarkemuel

./: .gitignore  CMakeLists.txt  Makefile  README.md  script_comandos.txt
data/: test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt
include/: canaltexto.h  mensagem.h  servidor.h  sistema.h  usuario.h
src/: canaltexto.cpp  executor.cpp  mensagem.cpp  servidor.cpp  sistema.cpp
