cmake_minimum_required(VERSION 3.5)
project(concordo VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "concordo", adiciona neste execut치vel os arquivos src/concordo.cpp src/sistema.cpp src/executor.cpp
add_executable( concordo
                src/concordo.cpp
                src/sistema.cpp 
								src/executor.cpp )

# The end
